--- a/index.html
+++ b/index.html
@@ -11,9 +11,22 @@
       <form ng-submit="postMessage(message)">
         <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
       </form>
+      <input class="form-control text-box" type="text" ng-model="filter.message" placeholder="Filter">
+
+      <!-- Daanish -->
+      <!-- <button ng-click="asc()"> OH YEA ASCENDING BRUH!</button>
+      <button ng-click="desc()"> OH YEA DESCENDING BRUH!</button> -->
+
+      <select class="form-control text-box" name="" id="" ng-model="sortDirection">
+        <option value="" disabled selected>Sort</option>
+        <option value="+createdAt">Oldest</option>
+        <option value="-createdAt">Newest</option>
+      </select>
+
       <div class="messages-container">
-        <p ng-repeat="message in messages ">
-          {{message.message}} </p>
+        <p ng-repeat="message in messages | filter: filter | orderBy: sortDirection">
+          {{message.message}} <span>{{message.createdAt | date: "short"}}</span>
+        </p>
       </div>
     </div>
 
